Migrational build: Migration is performed from SNAP:AndroidStudio:Flamingo to JetBranins:AndroidStudio:HedgeHog.
Added in manifest: Service AWSdService has now the permission ForeGroundService_Health, SensorHighSamplingRate and ervice android:foregroundServiceType="health"
Upgraded to target- compileSDK 34 and
        exclude group: 'com.google.protobuf', module: 'protobuf-java'
        implementation("com.google.protobuf:protobuf-javalite jetified-protobuf-java-3.21.8")
                        {
                            because("protobuf-java is now a part of kotlin-stdlib")
                        }
Now ready to start testing.

Applied info sources:
https://junit.org/junit5/docs/current/user-guide/#running-tests
https://stackoverflow.com/questions/46161113/junit-5-for-android-testing
https://proandroiddev.com/testing-on-android-using-junit-5-61b3d2cb3198